post api doc, changed delete api of post to use id
