# routes/post.js
@@ -5,6 +5,6 @@ const postController = require("../controllers/post");
 
 router.post('/post', postController.newPost);
 router.get('/post', postController.getPost);
-router.delete('/post/:title', postController.deletePost);
+router.delete('/post/:id', postController.deletePost);
 
 module.exports = router;
